--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <a class="navbar-brand" href="index.html">Your Name</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="index.html">About</a>
+        <li>
+          <a href="index.html">About</a>
         </li>
         <li>
           <a href="portfolio.html">Portfolio</a>
@@ -38,9 +39,15 @@
           <h1>About Me</h1>
           <div class="panel-body">
 
+            <!-- responsive image-->
             <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-            <p></p>
+            <p>A Boating Adventure by Leo Schaefer One day we were going to sail. We set out to sea but there was a storm in
+              our way. It tore our sail and we had to use the oars to paddle to an island. Before we could get to the island,
+              a boat got into our way. We used the horn to give them a signal of two short blasts which means ‘I want to
+              pass you on your starboard side.’ When we reached the shore of the small island, we found twenty plants of
+              corn. After that we repaired our sail and set off back to our home. We followed the North Star to get home.
+              It was a fun day on Friday.</p>
           </div>
         </div>
       </div>
